<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_promo"
        android:icon="@drawable/promo"
        android:title="@string/title_promotion" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/menu"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/add_order"
        android:title="Catering" />

    <item
        android:id="@+id/navigation_outlet"
        android:icon="@drawable/loca"
        android:title="@string/title_outlet" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/user"
        android:title="@string/title_user" />

</menu>